# rcpy

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
examples/: dynsys.py
src/rcpy/: _type.py  activations.py  lms.py  metrics.py  node.py  random.py  readout.py  reservoir.py  ridge.py  rls.py  weights.py
src/rebasicspy/: _type.py  activations.py  lms.py  metrics.py  node.py  random.py  readout.py  reservoir.py  ridge.py  rls.py  weights.py
tests/: _base.py  test_activations.py  test_lms.py  test_metrics.py  test_node.py  test_random.py  test_readout.py  test_reservoir.py  test_ridge.py  test_rls.py  test_weights.py
