[project]
name = "rebasicspy"
dynamic = ["version"]
description = "A simple implementation of reBASICS in Python"
authors = [
    {name = "Hiroshi Atsuta", email = "atsuta@ieee.org"},
]
dependencies = [
    "numpy>=1.25.1",
    "scipy>=1.11.2",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venvPath = "."
venv = ".venv"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "ipython>=8.14.0",
]
[tool.pdm.version]
source = "file"
path = "src/rebasicspy/__init__.py"

[toolpytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
